# react-native-camera

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  index.js  package-lock.json  package.json
Example/: Example.js  hls-demo-string.js  hls-index.html.js  package.json
Example/android/: settings.gradle
Example/android/app/: build.gradle
Example/ios/Example/: AppDelegate.m  Info.plist
Example/ios/Example.xcodeproj/: project.pbxproj
android/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  HLSRecorder.c
android/src/main/java/com/example/ffmpegtest/: FileUtils.java  HLSFileObserver.java
docs/: RNCamera.md
ios/: RCTCamera.m  RCTCameraManager.h  RCTCameraManager.m
ios/Frameworks/HudlFFmpeg/HudlFFmpegProcessor.xcodeproj/: project.pbxproj
ios/Frameworks/HudlFFmpeg/HudlFFmpegProcessor/Classes/: Utilities.m
ios/Frameworks/HudlFFmpeg/HudlFFmpegProcessor/Classes/FFmpegWrapper/: FFOutputStream.h  FFOutputStream.m
ios/Frameworks/HudlFFmpeg/HudlFFmpegProcessor/Classes/Inputs/: KFRecorder.h  KFRecorder.m
ios/RCT/: RCTCamera.m  RCTCameraManager.h  RCTCameraManager.m
ios/RCTCamera.xcodeproj/: project.pbxproj
ios/RN/: EncodeAAC.h  EncodeAAC.m  EncodeH264.h  EncodeH264.m  RNCamera.h  RNCamera.m  RNCameraManager.m  RNCryptManager.h  RNCryptManager.m  RNFileSystem.m
ios/RNCamera.xcodeproj/: project.pbxproj
postinstall_project/: projectWithoutFaceDetection.pbxproj
src/: Camera.js  RNCamera.js
types/: index.d.ts
(+31 files in other folders)
